# python_base_project

./: .gitignore  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml
python_base_project/tests/: test_dummy.py
scripts/: run_tests.sh
